{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 11,
  "lineage": "c8420116-397a-3e22-e8bd-e9f5b5974aa8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-terraform-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group/sg-07e747de082fff8c9",
            "description": "Created by terraform for allowing port-80",
            "egress": [],
            "id": "sg-07e747de082fff8c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "new-security-group",
            "name_prefix": "",
            "owner_id": "686255974968",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-sg"
            },
            "tags_all": {
              "Name": "Terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db691bdff879418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sg-07e747de082fff8c9",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group-rule/sgr-016e01f10348c4dca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-016e01f10348c4dca",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-07e747de082fff8c9",
            "security_group_rule_id": "sgr-016e01f10348c4dca",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sgr-016e01f10348c4dca",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.aws-terraform-security-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686255974968:security-group-rule/sgr-0418f279f6c7722b2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0418f279f6c7722b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-07e747de082fff8c9",
            "security_group_rule_id": "sgr-0418f279f6c7722b2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686255974968",
            "id": "sgr-0418f279f6c7722b2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.aws-terraform-security-group"
          ]
        }
      ]
    }
  ]
}